// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should render HotspotRating with HIGH rating 1`] = `
.emotion-0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  font-size: calc(1em + 4px);
  font-style: normal;
  font-weight: normal;
  height: calc(2em - 16px);
  line-height: calc(2em - 16px);
  text-align: center;
  vertical-align: bottom;
  width: calc(2em - 16px);
  color: var(--echoes-severity-badge-colors-foreground-high-icon-default);
  font-family: 'Echoes';
}

<span
  aria-hidden="true"
  aria-label="label"
  class="emotion-0 emotion-1"
>
  4
</span>
`;

exports[`should render HotspotRating with LOW rating 1`] = `
.emotion-0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  font-size: calc(1em + 4px);
  font-style: normal;
  font-weight: normal;
  height: calc(2em - 16px);
  line-height: calc(2em - 16px);
  text-align: center;
  vertical-align: bottom;
  width: calc(2em - 16px);
  color: var(--echoes-severity-badge-colors-foreground-low-icon-default);
  font-family: 'Echoes';
}

<span
  aria-hidden="true"
  aria-label="label"
  class="emotion-0 emotion-1"
>
  3
</span>
`;

exports[`should render HotspotRating with MEDIUM rating 1`] = `
.emotion-0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  font-size: calc(1em + 4px);
  font-style: normal;
  font-weight: normal;
  height: calc(2em - 16px);
  line-height: calc(2em - 16px);
  text-align: center;
  vertical-align: bottom;
  width: calc(2em - 16px);
  color: var(--echoes-severity-badge-colors-foreground-medium-icon-default);
  font-family: 'Echoes';
}

<span
  aria-hidden="true"
  aria-label="label"
  class="emotion-0 emotion-1"
>
  2
</span>
`;

exports[`should render HotspotRating with default LOW rating 1`] = `
.emotion-0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  font-size: calc(1em + 4px);
  font-style: normal;
  font-weight: normal;
  height: calc(2em - 16px);
  line-height: calc(2em - 16px);
  text-align: center;
  vertical-align: bottom;
  width: calc(2em - 16px);
  color: var(--echoes-severity-badge-colors-foreground-low-icon-default);
  font-family: 'Echoes';
}

<span
  aria-hidden="true"
  aria-label="label"
  class="emotion-0 emotion-1"
>
  3
</span>
`;
